# shallow

./: README.md  pyproject.toml  requirements.txt  setup.py
_examples/: 07_conditional1d_pad.ipynb  08_conditional.ipynb  09_population.ipynb  10_iaf.ipynb  11_iaf2.ipynb  12_torch.ipynb  13_nflows_moons.ipynb  16_nflows_nsf.ipynb  17_nflows_nsf_conditional.ipynb  18_sbi_nsf_conditional.ipynb
_working/: __init__.py
examples/: 01_moons.ipynb  08_conditional.ipynb  10_iaf.ipynb  11_iaf2.ipynb  12_torch.ipynb  13_nflows_moons.ipynb  14_nflows_wrapper.ipynb  15_nflows_conditional.ipynb  16_nflows_nsf.ipynb  17_nflows_nsf_conditional.ipynb  18_sbi_nsf_conditional.ipynb  2_powerlaw.ipynb  3_blockwise.ipynb  4_blockwisesub.ipynb  5_saving.ipynb  6_conditional1d.ipynb  8_conditional.ipynb  9_kaze.ipynb  bounded-flow.ipynb  flowjax.ipynb  flowjax2d.ipynb  injflow.ipynb  injflow_jax.ipynb  model.h5  nsf_conditional.ipynb  pytorch_flows.py  test.ipynb  toy.ipynb
examples/jax/: custom-trainer.ipynb  custom.ipynb
examples/old/: 01_moons.ipynb  02_powerlaw.ipynb  03_blockwise.ipynb  04_blockwisesub.ipynb  05_saving.ipynb  06_conditional1d.ipynb  07_conditional1d_pad.ipynb  10_iaf.ipynb  11_iaf2.ipynb  14_nflows_wrapper.ipynb  15_nflows_conditional.ipynb  17_nflows_nsf_conditional.ipynb  18_sbi_nsf_conditional.ipynb
examples/torch/: conditional.ipynb  nonconditional.ipynb  torch.ipynb
shallow/: __init__.py  flow.py  model.py  plot.py  sequential.py  transform.py  utils.py
shallow/jax/: __init__.py  distributions.py  flows.py  io.py  jax_jitted_training.ipynb  jit_loops.ipynb  (+5 more)
(+8 files in other folders)
